Prefer toList() over Collectors.toList()
Signed-off-by: Robert Young <robertyoungnz@gmail.com>